Fixed original positioning issue with trash and info on landscape, improving font-size from 15px to 18px for readability

--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -218,6 +218,6 @@ button {
     #inv-buttons > * {
         width:50px;
         height:50px;
-        font-size:15px;
+        font-size:18px;
     }
 }
